...
        
    }
    
    
    func presentAlert(){
        let alert = UIAlertController(title: "Привет", message: "Здравствуй, коллега! В принципе реализовал весь требуемый функционал, юзал не 500px как вы советовали в тз так как бесплатного апи у сервиса нет с 2018 года. Остался небольшой косяк с лейаутом в дитейлВью и две явные, но легкоисправимые добавлением метода поиска элемента в дб протечки абстракции в двух вьюхах. плюс, нужно обязательно
        alert.addAction(UIAlertAction(title: "хорошо", style: .default, handler: nil))
        alert.addAction(UIAlertAction(title: "плохо", style: .default, handler: nil))
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }
    
    
    func setBarButtonItemUI(){
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Search", style: .plain, target: self, action: #selector(transitionToSearch))
        navigationItem.rightBarButtonItem?.tintColor = UIColor.gray
    }
    
    @objc func transitionToSearch(){
        let vc = UIStoryboard(name: "SearchViewController", bundle: nil).instantiateViewController(withIdentifier: "SearchViewController")
        self.navigationController?.pushViewController(vc, animated: true)
...
